src/main/java/com/example/site/error/ErrorResponse.java
package com.example.site.error;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;

@Builder
@NoArgsConstructor
@AllArgsConstructor
@Getter
public class ErrorResponse {

    int status;
    String message;

}
